syntax = "proto3";

option go_package = "github.com/Venukishore-R/microservice1_auth/protos";

message User {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message UserRegResp {
  int64 status = 1;
  string description = 2;
}

message UserLoginReq {
  string email = 1;
  string password = 2;
}

message UserLoginResp {
  int64 status = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

service UserService {
  rpc Register(User) returns(UserRegResp);
  rpc Login(UserLoginReq) returns(UserLoginResp);
}
